force-app/main/default/objects/Liability__c/Liability__c.object-meta.xml
<CustomObject>
    <description>Currently unused object, part of CheerIO, in prod to assist with deployment of earlier features like assets.</description>
    <label>Liability</label>
    <nameField>
        <displayFormat>LIA-{000000}</displayFormat>
        <label>Liability name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Liabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>