force-app/main/default/objects/Liability__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <description>Used to record the amount currently left to pay on this liability.</description>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>