force-app/main/default/objects/Liability__c/fields/ClosureDate__c.field-meta.xml
<CustomField>
    <fullName>ClosureDate__c</fullName>
    <description>Field used to capture date Liability was closed/paid off.</description>
    <label>Closure date</label>
    <type>Date</type>
</CustomField>