force-app/main/default/objects/Liability__c/fields/CustomProviderName__c.field-meta.xml
<CustomField>
    <fullName>CustomProviderName__c</fullName>
    <description>If the provider of this liability is not listed on our current list of providers, a custom name is required to then be checked against our existing list and added if needed.</description>
    <label>Custom provider name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>