force-app/main/default/objects/Liability__c/fields/FinalPayment__c.field-meta.xml
<CustomField>
    <fullName>FinalPayment__c</fullName>
    <description>Field used to capture value of any Final Payment (aka. Balloon Payment).</description>
    <inlineHelpText>Sometimes known as a balloon payment.</inlineHelpText>
    <label>Final payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>