force-app/main/default/objects/Liability__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to record the related household.</description>
    <label>Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Liabilities (Household)</relationshipLabel>
    <relationshipName>Liabilities4</relationshipName>
    <type>Lookup</type>
</CustomField>