force-app/main/default/objects/Liability__c/fields/IsPaidInFullEachMonth__c.field-meta.xml
<CustomField>
    <fullName>IsPaidInFullEachMonth__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the liability is repaid in full each month.</description>
    <label>Is paid in full each month</label>
    <type>Checkbox</type>
</CustomField>