force-app/main/default/objects/Liability__c/fields/NotesCustomer__c.field-meta.xml
<CustomField>
    <fullName>NotesCustomer__c</fullName>
    <description>Used for any customer notes. This field is visible in the portal. Internal users can amend the notes via a quick action.</description>
    <label>Notes (customer)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>