force-app/main/default/objects/Liability__c/fields/PlatformCreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlatformCreatedDateTime__c</fullName>
    <description>To record when the liability record was created on the platform.</description>
    <label>Platform created date time</label>
    <type>DateTime</type>
</CustomField>