force-app/main/default/objects/Liability__c/fields/RepaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>RepaymentAmount__c</fullName>
    <description>The total sum the borrower is obligated to pay back. Includes the initial amount borrowed and any interest or fees that accrue. 
Available for input in the portal and salesforce.</description>
    <label>Repayment amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>