force-app/main/default/objects/Liability__c/fields/RepaymentFrequency__c.field-meta.xml
<CustomField>
    <fullName>RepaymentFrequency__c</fullName>
    <description>Frequency at which the liability payments are made</description>
    <label>Repayment frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>